--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "prepare": "husky install",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
     "pre-commit": "lint-staged",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,10 +51,14 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "customize-cra": "^1.0.0",
     "eslint": "^8.28.0",
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
-    "lint-staged": "^13.0.3"
+    "lint-staged": "^13.0.3",
+    "prettier": "2.8.3",
+    "react-app-rewired": "^2.2.1"
   },
   "husky": {
     "hooks": {
