--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
   "lint-staged": {
     "./src/*.{js,jsx,ts,tsx}": [
       "npm run format",
-      "npm run lint",
-      "git add"
+      "npm run lint"
     ]
   }
 }
