--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["Medica", "optionitem", "optionsitem"]
+  "cSpell.words": [
+    "languagedetector",
+    "lngs",
+    "Medica",
+    "optionitem",
+    "optionsitem",
+    "Запис",
+    "Записатись",
+    "прийом"
+  ]
 }
